
- Bug #1572832: fix a bug in ISO-2022 codecs which may cause segfault
  when encoding non-BMP unicode characters.

- Bug #1556784: allow format strings longer than 127 characters in
  datetime's strftime function.

- Fix itertools.count(n) to work with negative numbers again.

- Make regex engine raise MemoryError if allocating memory fails.


Library
-------

- ctypes callback functions only support 'fundamental' data types as
  result type.  Raise an error when something else is used.  This is a
  partial fix for Bug #1574584.

- Bug #813342: Start the IDLE subprocess with -Qnew if the parent
  is started with that option.

- Bug #1446043: correctly raise a LookupError if an encoding name given
  to encodings.search_function() contains a dot.

- Bug #1545341: The 'classifier' keyword argument to the Distutils setup() 
  function now accepts tuples as well as lists.

- Bug #1560617: in pyclbr, return full module name not only for classes,
  but also for functions.

- Bug #1566602: correct failure of posixpath unittest when $HOME ends
  with a slash.

- Bug #1565661: in webbrowser, split() the command for the default
  GNOME browser in case it is a command with args.

- Bug #1575506: Single-file mailboxes didn't re-lock properly in
  their flush() method.

- Bug #1576241: fix functools.wraps() to work on built-in functions.

- Patch #1574068: fix urllib/urllib2 to not insert line breaks when
  HTTP authentication data was very long.

- Fix a bug in traceback.format_exception_only() that led to an error
  being raised when print_exc() was called without an exception set.
  In version 2.4, this printed "None", restored that behavior.

- Make webbrowser.BackgroundBrowser usable in Windows (it wasn't because
  the close_fds arg to subprocess.Popen is not supported).


Tools/Demos
-----------

- Patch #1552024: add decorator support to unparse.py demo script.


Tests
-----

- Remove passwd.adjunct.byname from list of maps
  for test_nis.


Build
-----
